objects/DetailPageMapping__c.object
<CustomObject>
    <fields>
        <fullName>AccountURL__c</fullName>
        <label>AccountURL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Desktop_URL__c</fullName>
        <label>Account Desktop URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Online_URL__c</fullName>
        <label>Account Online URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityURL__c</fullName>
        <label>OpportunityURL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Account_Desktop_URL__c</columns>
        <columns>Account_Online_URL__c</columns>
        <columns>AccountURL__c</columns>
        <columns>OpportunityURL__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
        <language>en_US</language>
    </listViews>
</CustomObject>